# agent-study

./: .gitignore  PROGRESS.md  ai_agent_env_setup.html  ai_agent_study_plan.html  pyproject.toml
capstone/: issueforge_project_brief.html
phase1/week1/: README.md  agent_trace.py  react_loop.py  sample_trace.json  taxonomy.py  trace_demo.py
shared/utils/: config.py
