[project]
name = "agent-study"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "anthropic>=0.101.0",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "openai>=2.36.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-jaeger>=1.11.1",
    "opentelemetry-sdk>=1.41.1",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "rich>=15.0.0",
    "sentence-transformers>=5.4.1",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
]
